# spotify-update-new-release-playlist

./: .gitignore  LICENSE  README.md  pyproject.toml
spotify_update_new_release_playlist/: main.py
