[project]
name = "spotify_update_new_release_playlist"
version = "0.1.0"
description = ""
authors = [{ name = "Jason M. Owens" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "tekore>=6.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["spotify_update_new_release_playlist"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"
